2006-06-02 Tim
 PATCH: [ 1515455 ] Manual: Suppress navigation in htmlhelp
  Manual/build: build_htmlhelp.xsl
 PATCH: [ 1515510 ] Manual: Use 'listitem' in About_Doc.xml
  Manual: About_Doc.xml

2006-05-22 Tim
 PATCH: [ 1493170 ] Manual: Delete 'art' output dir after htmlhelp compile
  Manual/build: build_htmlhelp.bat
 PATCH: [ 1493171 ] Manual: Use index in htmlhelp
  Manual/build: build_htmlhelp.xsl

2006-05-20 Tim
 BUG: [ 1489121 ] index.hhk file left behind when creating HTMLHelp manual
  Manual/build: build_htmlhelp.bat

2006-03-06 Kimmo
 Bump manual version to 1.2.2
  Manual: WinMerge_help.xml

2006-03-01 Tim
 PATCH: [ 1405344 ] Manual: New icons
  Manual/screenshots: lfile.gif notequal.gif rfile.gif

2006-02-28 Kimmo
 PATCH: [ 1440383 ] Suggested addition to manual about bug reports
  Submitted by Perry
  Manual: Introduction.xml
 PATCH: [ 1440435 ] Manual: add FAQ item about hiding similar lines in editor
  Manual: Faq.xml

2006-02-14 Tim
 PATCH: [ 1431053 ] Manual: Remove echo off/on from configuration.bat (XSL)
  Manual/build: configuration.bat

2006-02-12 Kimmo
 BUG: [ 1412404 ] Manual example looks wrong
  Manual: Quick_start.xml

2006-02-12 Tim
 BUG: [ 1428754 ] HTML Help build broken?
  Manual/build: build_htmlhelp.bat

2006-01-27 Tim
 TODO: [ 1413926 ] Build manual file(s) to /Build
  Manual/build: configuration.bat

2006-01-26 Tim
 PATCH: [ 1414983 ] Manual: Make build path configurable (XSL)
  Manual/build: build_html.bat build_htmlhelp.bat configuration.bat

2006-01-24 Kimmo
 Bump revision number to 1.2.1
  Manual: WinMerge_help.xml

2006-01-23 Kimmo
 PATCH: [ 1412405 ] Some edits to About & QuickStart pages of manual
  Submitted by Perry
  Manual: About_Doc.xml Quick_start.xml

2006-01-17 Kimmo
 PATCH: [ 1407555 ] Manual: add new shortcuts for find
  Manual: Shortcut_keys.xml

2006-01-17 Tim
 PATCH: [ 1405344 ] Manual: New icons
  Manual/screenshots: binarydiff.gif equal.gif error.gif fileskip.gif